# pynoko

./: .gitmodules  CMakeLists.txt  README.md  example.py  main.cpp  nanobind.cpp  pyproject.toml
.github/workflows/: ci.yml  wheels.yml
res/: kcl.frag  kcl.vert
src/: nanobind.cpp
src/gfx/: Camera.cpp  Camera.hpp  Color.cpp  Color.hpp  KclOpengl.cpp  KclOpengl.hpp  MkwVis.cpp  MkwVis.hpp  Shader.cpp  Shader.hpp
src/gfx/glad/: glad.c
src/libmkw/: CMakeLists.txt  KclDrawable.cpp  KclDrawable.hpp  KclOpengl.cpp  KclOpengl.hpp  MkwVis.cpp  MkwVis.hpp  RaceCamera.cpp  RaceCamera.hpp  common.h
src/libmkw/bolt/: CMakeLists.txt
src/libmkw/bolt/cmake/: Config.cmake.in
src/libmkw/bolt/gfx/: CMakeLists.txt
src/libmkw/bolt/gfx/include/gfx/: Camera.hpp  Color.hpp  Drawable.hpp  DrawableArrow.hpp  DrawableCuboid.hpp  DrawableManager.hpp  DrawableMesh.hpp  DrawableModel.hpp  DrawableSpheroid.hpp  DrawableTriangle.hpp  Framebuffer.hpp  GlUtils.hpp  PhongDrawable.hpp  Shader.hpp  common.h  gl_defines.h
src/libmkw/bolt/gfx/share/: phong.frag  phong.vert  textured.frag  textured.vert
src/libmkw/bolt/gfx/src/: Camera.cpp  Color.cpp  Drawable.cpp  DrawableArrow.cpp  DrawableCuboid.cpp  DrawableManager.cpp  DrawableMesh.cpp  DrawableModel.cpp  DrawableSpheroid.cpp  DrawableTriangle.cpp  Framebuffer.cpp  GlUtils.cpp  PhongDrawable.cpp  Shader.cpp  gl_defines.cpp
src/libmkw/bolt/math/: CMakeLists.txt
src/libmkw/bolt/math/include/math/: Matrix.hpp  Quat.hpp  Vector.hpp  math.h
src/libmkw/bolt/math/src/: Matrix.cpp
src/libmkw/bolt/util/: CMakeLists.txt
src/libmkw/bolt/util/include/util/: Filesystem.hpp  common.h
src/libmkw/bolt/util/src/: Filesystem.cpp
src/libmkw/share/: kcl.frag  kcl.vert
src/math/: Matrix.cpp  Matrix.hpp  Vector.hpp
src/pynoko/: __init__.py
src/util/: Filesystem.cpp  Filesystem.hpp  common.hpp
