[build-system]
requires = ["scikit-build-core >=0.4.3", "nanobind >=1.3.2"]
build-backend = "scikit_build_core.build"

[project]
name = "pynoko"
version = "0.0.1"
description = "Python bindings for the Kinoko interface"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Theodoros Tyrovouzis", email = "m8em.eightm8@gmail.com" },
]
classifiers = [
    "License :: GPL-2.0",
]

[tool.scikit-build]
minimum-version = "0.4"
build-dir = "build/{wheel_tag}"
wheel.py-api = "cp312"

[tool.scikit-build.cmake]
args = [
    "-DCMAKE_BUILD_TYPE=Release",
    "-DPYNOKO_BUILD_GUI=OFF",
]

[tool.cibuildwheel.linux]
before-build = "yum install -y clang"
environment = { CC="clang", CXX="clang++" }
